--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
         "antd": "^4.20.2",
         "axios": "^0.26.1",
         "bootstrap": "^4.6.0",
+        "rc-footer": "^0.6.6",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.3.0",
