--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,12 +4,14 @@
     "private": true,
     "dependencies": {
         "@ant-design/icons": "^4.7.0",
+        "@craco/craco": "^6.4.3",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "antd": "^4.20.2",
         "axios": "^0.26.1",
         "bootstrap": "^4.6.0",
+        "craco-less": "^1.20.0",
         "rc-footer": "^0.6.6",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -19,10 +21,10 @@
         "validator": "^13.0.0"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "start": "craco start",
+        "build": "craco build",
+        "test": "craco test"
     },
     "eslintConfig": {
         "extends": "react-app"
