--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,10 +19,14 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "cloudinary": "^1.30.0",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
+        "md5": "^2.3.0",
+        "multer": "^1.4.4",
+        "multer-storage-cloudinary": "^4.0.0",
         "mysql2": "^2.0.2",
         "nodemailer": "^6.7.5",
         "nodemon": "^2.0.15",
