--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
         "craco-less": "^1.20.0",
         "rc-footer": "^0.6.6",
         "react": "^17.0.2",
+        "react-device-detect": "^2.2.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.3.0",
         "react-scripts": "4.0.3",
