--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
         "react": "^17.0.2",
         "react-device-detect": "^2.2.2",
         "react-dom": "^17.0.2",
+        "react-qr-code": "^2.0.7",
         "react-router-dom": "^6.3.0",
         "react-scripts": "4.0.3",
         "react-validation": "^3.0.7",
