--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
         "bcryptjs": "^2.4.3",
         "cloudinary": "^1.30.0",
         "cors": "^2.8.5",
+        "cron": "^2.0.0",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
@@ -30,6 +31,7 @@
         "mysql2": "^2.0.2",
         "nodemailer": "^6.7.5",
         "nodemon": "^2.0.15",
+        "redis": "^4.1.0",
         "sequelize": "^5.21.2"
     },
     "devDependencies": {
