--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ services:
     image: mysql:8.0.28
     restart: unless-stopped
     env_file: ./.env
-    command: --lower_case_table_names=1
+    command:
+      - --lower_case_table_names=2
+      # - --sql_mode=(SELECT REPLACE(@@sql_mode,'ONLY_FULL_GROUP_BY',''));
     environment:
       - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
       - MYSQL_DATABASE=$MYSQLDB_DATABASE
