--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,9 +12,12 @@
         "axios": "^0.26.1",
         "bootstrap": "^4.6.0",
         "craco-less": "^1.20.0",
+        "immutability-helper": "^3.1.1",
         "rc-footer": "^0.6.6",
         "react": "^17.0.2",
         "react-device-detect": "^2.2.2",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^17.0.2",
         "react-qr-code": "^2.0.7",
         "react-router-dom": "^6.3.0",
