--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
         "immutability-helper": "^3.1.1",
         "rc-footer": "^0.6.6",
         "react": "^17.0.2",
+        "react-date-range": "^1.4.0",
         "react-device-detect": "^2.2.2",
         "react-dnd": "^16.0.1",
         "react-dnd-html5-backend": "^16.0.1",
