--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,4 @@ dist
 # Card Extractor
 Service_card_extractor/yolov4_card_detection/data/
 Service_card_extractor/yolov4_card_detection/checkpoints/
+esdata
