--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,9 @@
+# DB_HOST=remotemysql.com
+# DB_USER=zrM4lPDnm2
+# DB_PASSWORD=PRqGpf8rm0
+# DB_NAME=zrM4lPDnm2
+# DB_PORT=3306
+
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=1234
@@ -6,7 +12,11 @@ DB_PORT=3306
 
 NODE_DOCKER_PORT=8080
 
-CLIENT_ORIGIN=http://localhost:8081
+# CLIENT_ORIGIN=http://127.0.0.1:8888
 
-GMAIL=youremail
-GMAIL_PASS=yourpasword
+GMAIL= "vuta183674@gmail.com"
+GMAIL_PASS= "upvuqcfpzhjlubdx"
+
+CLOUDINARY_NAME=huyhuyhuy212
+CLOUDINARY_KEY=271612425326849
+CLOUDINARY_SECRET=6QVOexiNPfoxaRizj-7N9SNSEEg
